[tool.poetry]
name = "rbn"
version = "0.1.0"
description = "A Python library for consuming data from the Reverse Beacon Network in real time"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
telnetlib3 = "^1.0.3"
asyncio = "^3.4.3"
rich = "^9.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
